# AgAnalytics

./: .gitignore
.github/: copilot-instructions.md
data-generator/: pyproject.toml  requirements.txt
data-generator/src/: __init__.py  cli.py  config.py
data-generator/src/anomalies/: __init__.py  engine.py  scenarios.py  schedule.py
data-generator/src/generators/: __init__.py  base.py  historical.py  realtime.py
data-generator/src/models/: __init__.py  crops.py  energy.py  equipment.py  greenhouse.py  sensors.py  supply_chain.py  weather.py
data-generator/src/outputs/: csv_writer.py  eventhub_publisher.py  parquet_writer.py
data-generator/tests/: test_generators.py  test_weather.py
fabric-artifacts/activator/: activator-rules.json
fabric-artifacts/agents/: crop-health-agent.md  greenhouse-ops-agent.md  supply-chain-agent.md
fabric-artifacts/direct-lake/: gold-table-schemas.py
fabric-artifacts/eventhouse/: create-kql-database.kql  graph-ontology.kql
fabric-artifacts/kql-queries/: anomaly-detection.kql  real-time-dashboard.kql
fabric-artifacts/lakehouse/: bronze-ingestion.py  gold-aggregate.py  silver-transform.py
fabric-artifacts/reports/: executive-dashboard-spec.md
fabric-artifacts/semantic-model/: measures.dax  model.tmdl
notebooks/: 03-yield-prediction-model.py  04-anomaly-classifier.py
